--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 				<version>3.1</version>
 				<configuration>
 					<source>1.8</source>
-					<to>1.8</to>
+					<target>1.8</target>
 				</configuration>
 			</plugin>
 			<plugin>
