--- a/pom.xml
+++ b/pom.xml
@@ -17,14 +17,33 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-			<plugin>
+<!--			<plugin>
 				<groupId>com.zenjava</groupId>
 				<artifactId>javafx-maven-plugin</artifactId>
 				<version>2.0</version>
 				<configuration>
 					<mainClass>cn.edu.thu.iss.App</mainClass>
 				</configuration>
-			</plugin>
+			</plugin>-->
+					<plugin>
+						<artifactId>maven-assembly-plugin</artifactId>
+						<configuration>
+							<!-- not append assembly id in release file name -->
+							<appendAssemblyId>false</appendAssemblyId>
+							<descriptors>
+								<descriptor>assemble/package.xml</descriptor>
+							</descriptors>
+						</configuration>
+						<executions>
+							<execution>
+								<id>make-assembly</id>
+								<phase>package</phase>
+								<goals>
+									<goal>single</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
 		</plugins>
 	</build>
 	<dependencies>
