mv cassandrawritetest  from test to source

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,27 @@
 							</execution>
 						</executions>
 					</plugin>
+
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>1.7</version>
+				<executions>
+					<execution>
+						<id>add-source</id>
+						<phase>generate-sources</phase>
+						<goals>
+							<goal>add-source</goal>
+						</goals>
+						<configuration>
+							<sources>
+								<!-- 可以在这里添加多个source节点，来添加任意多个源文件夹 -->
+								<source>models</source>
+							</sources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
